--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,27 @@
         <item name="android:layout_marginTop">10dp</item>
     </style>
 
+    <style name="LoginTheme" parent="FirebaseUI">
+    <item name="colorPrimary">@color/colorPrimary</item>
+    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    <item name="colorAccent">@color/colorAccent</item>
+    <item name="colorButtonNormal">@color/colorAccent</item>
+    <item name="colorControlNormal">@color/colorPrimaryDark</item>
+    <item name="colorControlActivated">@color/colorPrimaryDark</item>
+    <item name="android:textColorPrimary">@color/colorPrimary</item>
+    <item name="android:gravity">bottom</item>
+    <!--<item name="android:windowBackground">@mipmap/bg_login</item>-->
+    <item name="windowActionBar">false</item>
+    <item name="windowNoTitle">true</item>
+    <item name="android:windowFullscreen">true</item>
+    <item name="android:windowContentOverlay">@null</item>
+    </style>
+    <style name="MyThemeFullScreen" parent="Theme.AppCompat.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
 </resources>
