--- a/app/src/main/res/layout/product_list_row.xml
+++ b/app/src/main/res/layout/product_list_row.xml
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/celias_medium"
-                android:text="vnisi jrnjein  "
+                android:text=""
                 android:textSize="17sp"
                 android:layout_margin="10dp"
                 app:layout_constraintRight_toLeftOf="@+id/arrowIV"
@@ -44,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="5dp"
-                android:text="5 unit"
+                android:text=""
                 android:paddingBottom="5dp"
                 android:fontFamily="@font/celias_medium"
                 app:layout_constraintLeft_toLeftOf="@+id/tvProductName"
