--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -58,6 +58,7 @@
     android:layout_marginRight="3dp"
     android:layout_marginLeft="3dp">
    <android.support.v7.widget.CardView
+       android:id="@+id/vieweitCV"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
