--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
         <include
@@ -32,9 +33,9 @@
 
                 <ImageView
                     android:id="@+id/logo"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:background="@mipmap/ic_launcher"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@mipmap/logo"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -94,6 +95,30 @@
                     android:text="Login"
                     android:textColor="@color/white"
                     app:layout_constraintTop_toBottomOf="@+id/ETpassword" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:textSize="14sp"
+                    app:layout_constraintTop_toBottomOf="@+id/submit"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="@string/forgtpasword"
+                    android:layout_margin="20dp"
+                    android:gravity="center"
+                    android:textColor="@color/colorPrimary"
+                    android:fontFamily="@font/celias_medium"/>
+                <TextView
+                    android:id="@+id/signup"
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:textSize="14sp"
+                    app:layout_constraintTop_toBottomOf="@+id/submit"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:text="@string/register"
+                    android:layout_margin="20dp"
+                    android:gravity="center"
+                    android:textColor="@color/colorPrimary"
+                    android:fontFamily="@font/celias_medium"/>
             </android.support.constraint.ConstraintLayout>
         </android.support.v4.widget.NestedScrollView>
 
