--- a/app/src/main/res/layout/activity_productlist.xml
+++ b/app/src/main/res/layout/activity_productlist.xml
@@ -16,4 +16,18 @@
 
     </android.support.v7.widget.RecyclerView>
 
+    <TextView
+        android:id="@+id/noorderfound"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="17sp"
+        android:text="No Order Found"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toptoolbar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:fontFamily="@font/celias_bold"
+        android:visibility="gone"/>
+
 </android.support.constraint.ConstraintLayout>
