--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <include
         android:id="@+id/topToolbar"
@@ -32,13 +33,13 @@
 
             <ImageView
                 android:id="@+id/logo"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:background="@mipmap/ic_launcher"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@mipmap/logo"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginTop="15dp"/>
+                android:layout_marginTop="55dp"/>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/ETName"
@@ -104,7 +105,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/ETemail">
 
                 <EditText
-                    android:id="@+id/business_name"
+                    android:id="@+id/address"
                     style="@style/ShankarEdittext"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -122,7 +123,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/ETbusiness">
 
                 <EditText
-                    android:id="@+id/address"
+                    android:id="@+id/business_name"
                     style="@style/ShankarEdittext"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -180,7 +181,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/celias_medium"
-                    android:hint="@string/password"
+                    android:hint="@string/confirmpasswor"
                     android:inputType="textPassword"
                     android:singleLine="true"
                     android:text=""/>
