--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white">
+    android:background="@color/colorAccent">
     <!--<android.support.v4.widget.NestedScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -18,12 +18,12 @@
 
             <ImageView
                 android:id="@+id/logo"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:background="@mipmap/ic_launcher"
-                android:layout_marginTop="10dp"
+                android:background="@mipmap/logo"
+                android:layout_marginTop="50dp"
                 app:layout_constraintTop_toTopOf="parent"/>
             <TextView
                 android:layout_width="match_parent"
@@ -34,96 +34,97 @@
                 android:text="@string/interotext"
                 android:textSize="17sp"
                 android:fontFamily="@font/celias_medium"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:layout_margin="15dp"/>
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/signupCV"
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                card_view:cardElevation="3dp"
-                card_view:cardCornerRadius="4dp"
-                card_view:cardUseCompatPadding="true"
-                card_view:layout_constraintBottom_toTopOf="@+id/loginCV"
-                android:layout_marginBottom="20dp">
+            <!--<android.support.v7.widget.CardView-->
+                <!--android:id="@+id/signupCV"-->
+                <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--app:layout_constraintBottom_toBottomOf="parent"-->
+                <!--card_view:cardElevation="3dp"-->
+                <!--card_view:cardCornerRadius="4dp"-->
+                <!--card_view:cardUseCompatPadding="true"-->
+                <!--card_view:layout_constraintBottom_toTopOf="@+id/loginCV"-->
+                <!--android:layout_marginBottom="20dp">-->
                 <android.support.constraint.ConstraintLayout
+                    android:id="@+id/signupCV"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:background="@color/white">
-                    <TextView
-                        android:id="@+id/neweller"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/newseller"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        android:fontFamily="@font/celias_medium"
-                        android:layout_marginTop="10dp"
-                        android:textColor="@color/black"
-                        card_view:layout_constraintTop_toTopOf="parent"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/loginCV">
+                <TextView
+                    android:id="@+id/neweller"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/newseller"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:fontFamily="@font/celias_medium"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/white"/>
 
-                    <Button
-                        android:id="@+id/signupButton"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/large"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@color/white"
-                        android:drawableRight="@mipmap/ic_keyboard_arrow_right_white_24dp"
-                        android:text="SignUp"
-                        android:textColor="@color/black"
-                        app:layout_constraintTop_toBottomOf="@+id/neweller" />
+                <Button
+                    android:id="@+id/signupButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/large"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/white"
+                    android:drawableRight="@mipmap/ic_keyboard_arrow_right_white_24dp"
+                    android:text="SignUp"
+                    android:textColor="@color/black"
+                    app:layout_constraintTop_toBottomOf="@+id/neweller" />
 
 
-                </android.support.constraint.ConstraintLayout>
+            </android.support.constraint.ConstraintLayout>
 
-            </android.support.v7.widget.CardView>
-            <android.support.v7.widget.CardView
+      <!--  <android.support.v7.widget.CardView
+            android:id="@+id/loginCV"
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            card_view:cardElevation="3dp"
+            card_view:cardCornerRadius="4dp"
+            card_view:cardUseCompatPadding="true"
+            android:background="@color/white">-->
+            <android.support.constraint.ConstraintLayout
                 android:id="@+id/loginCV"
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                card_view:cardElevation="3dp"
-                card_view:cardCornerRadius="4dp"
-                card_view:cardUseCompatPadding="true"
-                android:background="@color/white">
-                <android.support.constraint.ConstraintLayout
+                android:layout_marginBottom="10dp"
+                app:layout_constraintBottom_toBottomOf="parent">
+                <TextView
+                    android:id="@+id/registeredTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/registered_seller"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:fontFamily="@font/celias_medium"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/white"/>
+
+                <Button
+                    android:id="@+id/submit"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:background="@color/white">
-                    <TextView
-                        android:id="@+id/registeredTV"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/registered_seller"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        android:fontFamily="@font/celias_medium"
-                        android:layout_marginTop="10dp"
-                        android:textColor="@color/black"
-                        card_view:layout_constraintTop_toTopOf="parent"/>
-
-                    <Button
-                        android:id="@+id/submit"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/large"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@color/white"
-                        android:drawableRight="@mipmap/ic_keyboard_arrow_right_white_24dp"
-                        android:text="Login"
-                        android:textColor="@color/black"
-                        app:layout_constraintTop_toBottomOf="@+id/registeredTV" />
+                    android:layout_height="@dimen/large"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/white"
+                    android:drawableRight="@mipmap/ic_keyboard_arrow_right_white_24dp"
+                    android:text="Login"
+                    android:textColor="@color/black"
+                    app:layout_constraintTop_toBottomOf="@+id/registeredTV" />
 
 
-                </android.support.constraint.ConstraintLayout>
+            </android.support.constraint.ConstraintLayout>
 
-            </android.support.v7.widget.CardView>
-        </android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
