--- a/app/src/main/res/layout/activity_addproduct.xml
+++ b/app/src/main/res/layout/activity_addproduct.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -60,7 +61,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/celias_medium"
-                android:hint="@string/product_unit"
+                android:hint="@string/product_varient"
+                android:singleLine="true"
+                android:text=""></EditText>
+        </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+            android:id="@+id/quantity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/unit">
+
+            <EditText
+                android:id="@+id/productQuantity"
+                style="@style/ShankarEdittext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/celias_medium"
+                android:hint="@string/stock_unit"
                 android:singleLine="true"
                 android:text=""></EditText>
         </android.support.design.widget.TextInputLayout>
@@ -70,7 +89,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/unit">
+            app:layout_constraintTop_toBottomOf="@+id/quantity">
 
             <EditText
                 android:id="@+id/productActual_price"
@@ -139,12 +158,16 @@
                 android:singleLine="true"
                 android:text=""></EditText>
         </android.support.design.widget.TextInputLayout>
+
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@mipmap/picture"
-                app:layout_constraintTop_toBottomOf="@+id/full_description"/>
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginLeft="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/full_description"
+                />
 
         <Button
             android:id="@+id/submit"
