--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -76,7 +76,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/celias_medium"
-                        android:hint="@string/password"
+                        android:hint="@string/enterpassword"
                         android:singleLine="true"
                         android:inputType="textPassword"
                         android:text=""/>
@@ -93,6 +93,7 @@
                     android:background="@color/maroon"
                     android:drawableRight="@mipmap/ic_keyboard_arrow_right_white_24dp"
                     android:text="Login"
+                    android:paddingLeft="15dp"
                     android:textColor="@color/white"
                     app:layout_constraintTop_toBottomOf="@+id/ETpassword" />
 
