--- a/app/src/main/res/layout/activity_addproduct.xml
+++ b/app/src/main/res/layout/activity_addproduct.xml
@@ -84,12 +84,30 @@
                 android:text=""></EditText>
         </android.support.design.widget.TextInputLayout>
 
+            <android.support.design.widget.TextInputLayout
+            android:id="@+id/brand"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/quantity">
+
+            <EditText
+                android:id="@+id/productBrand"
+                style="@style/ShankarEdittext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/celias_medium"
+                android:hint="@string/brand"
+                android:singleLine="true"
+                android:text=""></EditText>
+        </android.support.design.widget.TextInputLayout>
+
         <android.support.design.widget.TextInputLayout
             android:id="@+id/actual_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/quantity">
+            app:layout_constraintTop_toBottomOf="@+id/brand">
 
             <EditText
                 android:id="@+id/productActual_price"
@@ -159,7 +177,7 @@
                 android:text=""></EditText>
         </android.support.design.widget.TextInputLayout>
 
-            <ImageView
+            <!--<ImageView
                 android:id="@+id/imageView"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
@@ -168,18 +186,35 @@
                 android:layout_marginLeft="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/full_description"
                 />
+-->
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/imageRV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:nestedScrollingEnabled="false"
+                app:layout_constraintTop_toBottomOf="@+id/full_description">
 
-        <Button
-            android:id="@+id/submit"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/large"
-            android:layout_margin="20dp"
-            android:background="@color/maroon"
-            android:drawableRight="@mipmap/ic_keyboard_arrow_right_white_24dp"
-            android:text="Add"
-            android:textColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v4.widget.NestedScrollView>
+            </android.support.v7.widget.RecyclerView>
+            <ImageView
+               android:id="@+id/imageView"
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:background="@mipmap/picture"
+               app:layout_constraintLeft_toLeftOf="parent"
+               android:layout_marginLeft="20dp"
+               app:layout_constraintTop_toBottomOf="@+id/imageRV"
+               />
+       <Button
+           android:id="@+id/submit"
+           android:layout_width="match_parent"
+           android:layout_height="@dimen/large"
+           android:layout_margin="20dp"
+           android:background="@color/maroon"
+           android:text="Add"
+           android:textColor="@color/white"
+           app:layout_constraintTop_toBottomOf="@+id/imageView" />
+       </android.support.constraint.ConstraintLayout>
+   </android.support.v4.widget.NestedScrollView>
 
 </android.support.constraint.ConstraintLayout>
