--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -26,6 +26,7 @@
                 android:layout_marginTop="50dp"
                 app:layout_constraintTop_toTopOf="parent"/>
             <TextView
+                android:id="@+id/splash_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintLeft_toLeftOf="parent"
