--- a/app/src/main/res/layout/activity_productlist.xml
+++ b/app/src/main/res/layout/activity_productlist.xml
@@ -8,11 +8,45 @@
     <include
         android:id="@+id/toptoolbar"
         layout="@layout/common_toolbar"/>
+    <TextView
+        android:id="@+id/textDA"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toptoolbar"
+        android:layout_margin="10dp"
+        android:text="Delivery Address:"
+        android:textSize="16sp"
+        android:visibility="gone"
+        android:fontFamily="@font/celias_medium"/>
+
+    <TextView
+        android:id="@+id/dliveryAdress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/textDA"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="Shankar Kumar, 403 Sanjay Nagar, Bangalore 56061. "
+        android:visibility="gone"
+        android:layout_marginLeft="15dp"
+        android:textSize="13sp"/>
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        app:layout_constraintTop_toBottomOf="@+id/dliveryAdress"
+        android:background="@color/grey_600"
+        android:layout_marginTop="5dp"
+        android:visibility="gone"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/RVproduct"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/toptoolbar">
+        app:layout_constraintTop_toBottomOf="@+id/view"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="1dp">
 
     </android.support.v7.widget.RecyclerView>
 
