--- a/app/src/main/res/layout/activity_productlist.xml
+++ b/app/src/main/res/layout/activity_productlist.xml
@@ -1,98 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <include
         android:id="@+id/toptoolbar"
-        layout="@layout/common_toolbar"/>
-    <TextView
-        android:id="@+id/textDA"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toptoolbar"
-        android:layout_margin="10dp"
-        android:text="Delivery Address:"
-        android:textSize="16sp"
-        android:visibility="gone"
-        android:fontFamily="@font/celias_medium"/>
+        layout="@layout/common_toolbar" />
 
-    <TextView
-        android:id="@+id/dliveryAdress"
-        android:layout_width="wrap_content"
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/navigation"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/textDA"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text=" "
-        android:visibility="gone"
-        android:layout_marginLeft="15dp"
-        android:textSize="13sp"/>
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        app:layout_constraintTop_toBottomOf="@+id/dliveryAdress"
-        android:background="@color/grey_600"
-        android:layout_marginTop="5dp"
-        android:visibility="gone"/>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/RVproduct"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/view"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="1dp">
-
-    </android.support.v7.widget.RecyclerView>
-<View
-    android:id="@+id/priceView"
-    android:layout_width="match_parent"
-    android:layout_height="0.5dp"
-    android:background="@color/grey_750"
-    app:layout_constraintTop_toBottomOf="@+id/RVproduct"
-    android:layout_marginTop="10dp"
-    android:visibility="gone"/>
-    <TextView
-        android:id="@+id/amount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/priceView"
-        android:layout_margin="15dp"
-        android:textSize="15sp"
-        android:fontFamily="@font/celias_medium"
-        android:text="Total Amount:"
-        android:visibility="gone"/>
-    <TextView
-        android:id="@+id/textTotalAmount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/amount"
-        app:layout_constraintBottom_toBottomOf="@+id/amount"
-        android:layout_marginEnd="15dp"
-        android:textSize="15sp"
-        android:fontFamily="@font/celias_medium"
-        android:text=""/>
-
-
-    <TextView
-        android:id="@+id/noorderfound"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="17sp"
-        android:text="No Order Found"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:background="?android:attr/windowBackground"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toptoolbar"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:fontFamily="@font/celias_bold"
-        android:visibility="gone"/>
+        app:menu="@menu/navigation" />
+
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/navigation"/>
+
 
 </android.support.constraint.ConstraintLayout>
