--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -54,7 +54,25 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/celias_medium"
-                    android:hint="@string/name"
+                    android:hint="@string/firstname"
+                    android:singleLine="true"
+                    android:text=""/>
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/ETLastName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/ETName">
+
+                <EditText
+                    android:id="@+id/LastName"
+                    style="@style/ShankarEdittext"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/celias_medium"
+                    android:hint="@string/lastname"
                     android:singleLine="true"
                     android:text=""/>
             </android.support.design.widget.TextInputLayout>
@@ -64,7 +82,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                app:layout_constraintTop_toBottomOf="@+id/ETName">
+                app:layout_constraintTop_toBottomOf="@+id/ETLastName">
 
                 <EditText
                     android:id="@+id/mobile"
@@ -75,6 +93,7 @@
                     android:hint="@string/mobile"
                     android:inputType="phone"
                     android:singleLine="true"
+                    android:maxLength="10"
                     android:text=""></EditText>
             </android.support.design.widget.TextInputLayout>
 
@@ -149,6 +168,7 @@
                     android:hint="@string/pincode"
                     android:inputType="number"
                     android:singleLine="true"
+                    android:maxLength="6"
                     android:text=""/>
             </android.support.design.widget.TextInputLayout>
             <android.support.design.widget.TextInputLayout
