--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -91,7 +91,8 @@
        card_view:cardElevation="3dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true"
-       android:layout_weight=".5">
+       android:layout_weight=".5"
+       android:visibility="gone">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
@@ -103,14 +104,13 @@
           android:drawablePadding="10dp"
           android:fontFamily="@font/celias_medium"/>
    </android.support.v7.widget.CardView>
-</LinearLayout>
-
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        card_view:cardElevation="3dp"
        card_view:cardCornerRadius="4dp"
+       android:layout_weight=".5"
        card_view:cardUseCompatPadding="true">
       <TextView
           android:layout_width="wrap_content"
@@ -123,6 +123,9 @@
           android:textSize="20sp"
           android:fontFamily="@font/celias_medium"/>
    </android.support.v7.widget.CardView>
+</LinearLayout>
+
+
 
 
 </LinearLayout>
